<resources>
    <string name="app_name">GESMediaPlayer</string>
    <string name="title_activity_home">GES Media Player</string>


    <!--Navigation bar header-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GES Media Player</string>
    <string name="nav_header_subtitle">1502068@uad.ac.uk</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Navigation bar option strings-->
    <string name="navigation_drawer_playing_now">Playing Now</string>
    <string name="navigation_drawer_songs">Songs</string>
    <string name="navigation_drawer_artists">Artists</string>
    <string name="navigation_drawer_albums">Albums</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_share">Share</string>
    <string name="navigation_drawer_separator_title">Extras</string>

    <!--Toolbar popup menu strings-->
    <string name="popup_action_settings">Settings</string>
    <string name="popup_action_search">Search</string>
    <string name="popup_action_setting2">Setting 2</string>
    <string name="popup_action_setting3">Setting 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
