<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_playing_now"
            android:icon="@drawable/ic_headset_black_24dp"
            android:title="@string/navigation_drawer_playing_now"/>
        <item
            android:id="@+id/nav_all_songs"
            android:icon="@drawable/ic_music_note_black_24dp"
            android:title="@string/navigation_drawer_songs" />
        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/navigation_drawer_artists" />
        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_album_black_24dp"
            android:title="@string/navigation_drawer_albums" />
    </group>

    <item android:title="@string/navigation_drawer_separator_title">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/navigation_drawer_settings"/>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/navigation_drawer_share" />
        </menu>
    </item>

</menu>
