<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_action_settings"
        android:orderInCategory="100"
        android:title="@string/popup_action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_action_search"
        android:title="@string/popup_action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/setting2"
        android:title="@string/popup_action_setting2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/setting3"
        android:title="@string/popup_action_setting3"
        app:showAsAction="never"/>

    <!--these will obviously have to be revised better when actually implementing the popup-->
</menu>
